# ekata-gateway-processor-backend

./: Dockerfile  README.md  main.py  pyproject.toml  sample.env  start-arq-worker.sh  start.sh
app/: app.py
app/api/api_v1/: api.py
app/api/api_v1/dependencies/: auth.py
app/api/api_v1/dependencies/auth/: auth.py  login_form.py
app/api/api_v1/endpoints/: auth.py  users.py
app/api/api_v1/endpoints/client/: __init__.py  payout.py  payout_address.py  projects.py  two_factor.py
app/api/api_v1/endpoints/payment_form/: __init__.py  payment.py  payment_form.py  project.py
app/constants/: auth_errors.py  payment.py  payment_status.py
app/core/: config.py
app/crud/: clients_payout.py  clients_payout_address.py  payment_form.py  payments.py  projects.py  user_two_factor.py
app/db/: __init__.py  codecs.py  mongodb_manager.py  type_registry.py
app/email_templates/auth/: forgot_password.html  request_verify_email.html  two_factor.html  two_factor_recovery_code_regeneration.html
app/exceptions/: __init__.py  payment.py
app/models/: clients_payout_address.py  payment_form.py  payments.py  payout.py  projects.py  users.py
app/permissions/: auth.py
app/redis/: __init__.py  manager.py
app/utils/: api_key.py  auth.py  common.py  payment.py  projects.py  user_two_factor.py
app/utils/daemon_api_wrapper/: __init__.py  baza.py  bitcoin.py  dogecoin.py  monero.py
app/worker/: __init__.py
app/worker/tasks/: auth.py  payment.py  payout.py
