[tool.poetry]
name = "ekata-gateway-processor-backend"
version = "0.1.0"
description = "Ekata Gateway Processor Backend"
authors = ["Prasanta Kakati <prasantakakati1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.70.0"}
celery = "^5.1.2"
emails = "^0.6"
fastapi-users = {extras = ["mongodb"], version = "^9.2.1"}
arq = "^0.22"
simplejson = "^3.17.6"
sentry-sdk = "^1.5.0"
hypercorn = "^0.12.0"
pyotp = "^2.6.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
autopep8 = "^1.5.7"
ipython = "^7.28.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
